panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__literal__test_error_prefixed_char_constant_with_multiple_characters.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/literal/test_error_prefixed_char_constant_with_multiple_characters.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/literal/test_error_prefixed_char_constant_with_multiple_characters.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (expression u8'ab\1234')
         (expression u'ab')
         (expression U'ab')
         (expression L'ab'))))

----- stderr -----
