panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__literal__test_integer_literal.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/literal/test_integer_literal.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/literal/test_integer_literal.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (expression 42)
         (expression 0x42)
         (expression 042)
         (expression 0)
         (expression 0b1010'1010)
         (expression 0x1234u)
         (expression 0ul)
         (expression 0b110011ull))))

----- stderr -----
